--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "tailwindBuild": "tailwindcss -i ./css/style.css -o ./dist/output.css --watch"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "gh-pages": "^6.1.1",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "vite": "^5.3.4"
   }
 }
