--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
     "vite": "^5.3.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
